# qt-terminal-widget

./: .gitignore  CMakeLists.txt  LICENSE  MICROSOFT_TERMINAL_MODULE_MAPPING.md  MICROSOFT_TERMINAL_REUSE_MATRIX.md  PROGRESS_TRACKER.md  README.md  WINDOWS_TERMINAL_EXPERIENCE_PARITY_SPEC.md  handover_knowledge_base.md  交接知识库.md  微软终端复用矩阵.md  微软终端模块映射.md  终端体验对标规范.md  进度跟踪.md
examples/: main.cpp
src/pty/: conptyprocess.cpp  conptyprocess.h  iptyprocess.h  ptyqt.cpp  unixptyprocess.cpp  unixptyprocess.h
src/terminal/: ansiparser.cpp  ansiparser.h  inputtranslator.cpp  inputtranslator.h  terminal_global.h  terminalwidget.cpp  terminalwidget.h
tests/: terminalwidget_wheel_test.cpp
